--- a/app/src/main/res/layout/content_current_book.xml
+++ b/app/src/main/res/layout/content_current_book.xml
@@ -107,13 +107,15 @@
 
 
             <TextView
-                android:visibility="gone"
+                android:layout_margin="5dp"
                 android:gravity="center"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/current_book_online_new_speed"/>
+                android:id="@+id/current_book_online_new_speed"
+                android:textSize="18sp" />
 
+            <!--android:visibility="gone"-->
         </RelativeLayout>
 
 
@@ -124,6 +126,20 @@
             android:layout_height="60dp"
             android:background="@color/colorPrimary"
             android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <android.support.v7.widget.AppCompatImageButton
+                    android:id="@+id/current_book_speed_minus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/speed_down_button"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -155,12 +171,12 @@
             </RelativeLayout>
 
 
-            <TextView
-                android:id="@+id/current_book_current_speed"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/white" />
+            <!--<TextView-->
+                <!--android:id="@+id/current_book_current_speed"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:gravity="center"-->
+                <!--android:textColor="@color/white" />-->
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -191,6 +207,19 @@
                     android:textColor="@color/white" />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <android.support.v7.widget.AppCompatImageButton
+                    android:id="@+id/current_book_speed_plus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/speed_up_button"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
         </LinearLayout>
 
     </LinearLayout>
