--- a/app/src/main/res/menu/menu_current_book.xml
+++ b/app/src/main/res/menu/menu_current_book.xml
@@ -18,6 +18,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_reward_more_words"
+        android:orderInCategory="100"
+        android:title="@string/reward_more_words"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
