--- a/app/src/main/res/menu/menu_all_books.xml
+++ b/app/src/main/res/menu/menu_all_books.xml
@@ -45,11 +45,11 @@
     </group>
 
 
-    <!--<item-->
-        <!--android:id="@+id/sign_in_or_out"-->
-        <!--android:orderInCategory="100"-->
-        <!--android:title="@string/sign_in"-->
-        <!--app:showAsAction="never" />-->
+    <item
+        android:id="@+id/sign_in_or_out"
+        android:orderInCategory="100"
+        android:title="@string/sign_in"
+        app:showAsAction="never" />
 
 
     <item
