--- a/app/src/main/res/layout/content_current_book.xml
+++ b/app/src/main/res/layout/content_current_book.xml
@@ -171,6 +171,21 @@
             </RelativeLayout>
 
 
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <android.support.v7.widget.AppCompatImageButton
+                    android:id="@+id/current_book_tts_reading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/book_tts_reading_button"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
+
             <!--<TextView-->
                 <!--android:id="@+id/current_book_current_speed"-->
                 <!--android:layout_width="wrap_content"-->
